@startuml
'https://plantuml.com/class-diagram

interface RecordDao{
    + {abstract} getAllRecord(int level):List<Record>
    + {abstract} updateRecord(Record record, int level):void
    + {abstract} deleteRecord(int row, int level):void
    + {abstract} writeRecord(List<Record> records, int level):void
    + {abstract} printRecord(int level):void
}

class RecordDaoImpl{
    - file1: File
    - file2: File
    - file3: File
    - file: File
    + RecordDaoImpl(int level)
    - chooseFile(int level):File
    + getAllRecord(int level):List<Record>
    + updateRecord(Record record, int level):void
    + deleteRecord(int row, int level):void
    + writeRecord(List<Record> records, int level):void
    + printRecord(int level):void
}

class Record{
    - userName:String
    - score:int
    - time:String
    + Record(String userName, int score, String time)
    + Record()
    + setUserName(String userName):void
    + getUserName():String
    + setScore(int score):void
    + getScore():int
    + setTime(String time):void
    + getTime():String
}

RecordDao <|.. RecordDaoImpl
RecordDaoImpl --> Record


@enduml